--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,36 +1,30 @@
 trigger:
 - '*'
 
-jobs:
-- job: Setup
-  strategy:
-    matrix:
-      browser: chromium
-  steps:
-  - script: echo "Running job with browser $browser"
-  
-  - job: ConfigureEnvironment
-    displayName: "Configure Environment"
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - script: echo "Configuring environment on Ubuntu"
-    
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.10'
-        addToPath: true
-      displayName: "Install and use Python"
-      
-    - script: pip install -r requirements.txt
-      displayName: "Install dependencies from requirements.txt"
-      
-  - job: RunWebTests
-    displayName: "Run web tests"
-    dependsOn: ConfigureEnvironment
-    steps:
-    - script: echo "Running web tests with browser $browser"
-    
-    - script: |
-        robot -d TestResults --variable BROWSER:$browser Tests
-      displayName: "Execute Robot Framework tests"
+pool:
+  vmImage: 'ubuntu-latest'
+
+strategy:
+  matrix:
+    Python38:
+      python.version: '3.8'
+      browser: 'chromium'
+    Python39:
+      python.version: '3.9'
+      browser: 'firefox'
+
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '$(python.version)'
+    addToPath: true
+
+- script: |
+    pip install robotframework
+    pip install robotframework-browser
+    pip install webdrivermanager
+    webdrivermanager firefox chrome --linkpath /usr/local/bin
+
+- script: |
+    robot --variable BROWSER:${{ matrix.browser }} tests/
+  displayName: 'Run tests'
