--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,35 +1,39 @@
 trigger:
 - '*'
 
-pool:
-  vmImage: 'ubuntu-latest'
-
 strategy:
-  maxParallel: 2
   matrix:
     Chromium:
       browser: 'chromium'
     Firefox:
       browser: 'firefox'
+    Webkit:
+      browser: 'webkit'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.10'
-    addToPath: true
+jobs:
+  - job: RunOnUbuntu
+    pool:
+      vmImage: 'ubuntu-latest'
 
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r web_requirements.txt
-    rfbrowser init
-  displayName: Install dependencies
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.10'
+        addToPath: true
+      displayName: Install Python 3.10
 
-- script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
-  displayName: Run Web Test
-  continueOnError: true
+    - script: |
+        python -m pip install --upgrade pip
+        pip install -r web_requirements.txt
+        rfbrowser init
+      displayName: Install dependencies
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'logs_web/output-xunit.xml'
-  displayName: 'Publish Test Results'
+    - script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
+      displayName: Run Web Test
+      continueOnError: true
+
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'logs_web/output-xunit.xml'
+      displayName: 'Publish Test Results'
