--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,59 @@
 trigger:
 - '*'
 
-strategy:
-  matrix:
-    Chromium:
-      browser: 'chromium'
-    Firefox:
-      browser: 'firefox'
-    Webkit:
-      browser: 'webkit'
+variables:
+  python.version: '3.10'
 
 jobs:
   - job: RunOnUbuntu
     pool:
       vmImage: 'ubuntu-latest'
+    strategy:
+      matrix:
+        Chromium:
+          browser: 'chromium'
+        Firefox:
+          browser: 'firefox'
 
     steps:
     - task: UsePythonVersion@0
       inputs:
-        versionSpec: '3.10'
+        versionSpec: '$(python.version)'
         addToPath: true
-      displayName: Install Python 3.10
+      displayName: Install Python $(python.version)
+
+    - script: |
+        python -m pip install --upgrade pip
+        pip install -r web_requirements.txt
+        rfbrowser init
+      displayName: Install dependencies
+
+    - script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
+      displayName: Run Web Test
+      continueOnError: true
+
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: 'logs_web/output-xunit.xml'
+      displayName: 'Publish Test Results'
+
+  - job: RunOnMacOS
+    pool:
+      vmImage: 'macOS-latest'
+    strategy:
+      matrix:
+        Chromium:
+          browser: 'chromium'
+        Webkit:
+          browser: 'webkit'
+
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '$(python.version)'
+        addToPath: true
+      displayName: Install Python $(python.version)
 
     - script: |
         python -m pip install --upgrade pip
