--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -1,5 +1,11 @@
-trigger:
-- '*'
+trigger: none
+
+pr:
+ branches:
+  include:
+  - main
+  - develop
+  - feature/*
 
 variables:
   python.version: '3.10'
@@ -26,7 +32,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r web_requirements.txt
         rfbrowser init
-      displayName: Install dependencies
+      displayName: Update Python and Install Dependencies
 
     - script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
       displayName: Run Web Test
@@ -59,11 +65,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r web_requirements.txt
         rfbrowser init
-      displayName: Install dependencies
+      displayName: Update Python and Install Dependencies
 
     - script: robot -d ./logs_web -x output-xunit.xml -v BROWSER:$(browser) --listener RetryFailed -e servicetest -e mobiletest .
       displayName: Run Web Test
       continueOnError: true
+
+    - task: DownloadPipelineArtifacts@2
+      inputs:
+        artifactName: test-results
 
     - task: PublishTestResults@2
       inputs:
