--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,6 +11,7 @@ pipelines:
           - pip3 install -r web_requirements.txt
           - rfbrowser init
           - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
+          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:firefox --listener RetryFailed -e servicetest -e mobiletest .
         artifacts:
           - logs_web/output-xunit.xml
     - step:
@@ -21,33 +22,17 @@ pipelines:
           - pip install -r web_requirements.txt
           - rfbrowser init
           - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
+          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:webkit --listener RetryFailed -e servicetest -e mobiletest .
         artifacts:
           - logs_web/output-xunit.xml
 
   branches:
     main:
-      - step:
-          name: RunOnUbuntu
-          image: ubuntu:latest
-          script:
-            - apt-get update && apt-get install -y python3-pip
-            - pip3 install --upgrade pip
-            - pip3 install -r web_requirements.txt
-            - rfbrowser init
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-          artifacts:
-            - logs_web/output-xunit.xml
-      - step:
-          name: RunOnMacOS
-          image: python:3.10
-          script:
-            - pip install --upgrade pip
-            - pip install -r web_requirements.txt
-            - rfbrowser init
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-          artifacts:
-            - logs_web/output-xunit.xml
+      - main
 
     develop:
+      - develop
 
     feature/*:
+      - feature/*
+
