--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,7 @@ pipelines:
         name: RunOnUbuntu
         image: ubuntu:latest
         script:
+          - export PATH=$PATH:/usr/local/bin
           - apt-get update && apt-get install -y python3-pip
           - pip3 install --upgrade pip
           - pip3 install -r web_requirements.txt
@@ -18,6 +19,7 @@ pipelines:
         name: RunOnMacOS
         image: python:3.10
         script:
+          - export PATH=$PATH:/usr/local/bin
           - pip install --upgrade pip
           - pip install -r web_requirements.txt
           - rfbrowser init
