--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,32 +2,37 @@ image: python:3.10
 
 pipelines:
   default:
-    - step:
-        name: RunOnUbuntu
-        image: ubuntu:latest
-        script:
-          - export PATH=$PATH:/usr/local/bin
-          - apt-get update && apt-get install -y python3-pip nodejs npm
-          - pip3 install --upgrade pip
-          - pip3 install -r web_requirements.txt
-          - rfbrowser init
-          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:firefox --listener RetryFailed -e servicetest -e mobiletest .
-        artifacts:
-          - logs_web/output-xunit.xml
-    - step:
-        name: RunOnMacOS
-        image: python:3.10
-        script:
-          - brew install nodejs npm
-          - export PATH=$PATH:/usr/local/bin
-          - pip install --upgrade pip
-          - pip install -r web_requirements.txt
-          - rfbrowser init
-          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-          - robot -d ./logs_web -x output-xunit.xml -v BROWSER:webkit --listener RetryFailed -e servicetest -e mobiletest .
-        artifacts:
-          - logs_web/output-xunit.xml
+    parallel:
+      - step:
+          name: RunOnUbuntu
+          image: ubuntu:latest
+          script:
+            - export PATH=$PATH:/usr/local/bin
+            - apt-get update && apt-get install -y python3-pip nodejs npm
+            - sudo npm install @playwright/test
+            - sudo npx playwright install-deps
+            - pip install --upgrade pip
+            - pip install -r web_requirements.txt
+            - rfbrowser init
+            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
+            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:firefox --listener RetryFailed -e servicetest -e mobiletest .
+          artifacts:
+            - logs_web/output-xunit.xml
+      - step:
+          name: RunOnMacOS
+          image: python:3.10
+          script:
+            - brew install nodejs npm
+            - export PATH=$PATH:/usr/local/bin
+            - sudo npm install @playwright/test
+            - sudo npx playwright install-deps
+            - pip install --upgrade pip
+            - pip install -r web_requirements.txt
+            - rfbrowser init
+            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
+            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:webkit --listener RetryFailed -e servicetest -e mobiletest .
+          artifacts:
+            - logs_web/output-xunit.xml
 
   pr:
     branches:
@@ -35,4 +40,3 @@ pipelines:
         - main
         - develop
         - feature/*
-
