--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,9 +8,11 @@ pipelines:
           image: ubuntu:latest
           script:
             - export PATH=$PATH:/usr/local/bin
-            - apt-get update && apt-get install -y python3-pip nodejs npm
-            - npm install @playwright/test
-            - pip install --upgrade pip
+            - apt-get update
+            - apt-get install -y python3 python3-pip wget
+            - wget https://playwright.azureedge.net/builds/chromium/857950/chromium-linux.zip
+            - unzip chromium-linux.zip
+            - export PLAYWRIGHT_BROWSERS_PATH=$PWD
             - pip install -r web_requirements.txt
             - rfbrowser init
             - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
