--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,46 +1,21 @@
-image: python:3.10
+image: ubuntu:latest
 
 pipelines:
   default:
-    - parallel:
-      - step:
-          name: RunOnUbuntu
-          image: ubuntu:latest
-          script:
-            - export PATH=$PATH:/usr/local/bin
-            - apt-get update
-            - apt-get install -y python3 python3-pip wget
-            - wget https://playwright.azureedge.net/builds/chromium/857950/chromium-linux.zip
-            - unzip chromium-linux.zip
-            - export PLAYWRIGHT_BROWSERS_PATH=$PWD
-            - pip install -r web_requirements.txt
-            - rfbrowser init
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:firefox --listener RetryFailed -e servicetest -e mobiletest .
-          artifacts:
-            - logs_web/output-xunit.xml
-    - parallel:
-      - step:
-          name: RunOnMacOS
-          image: python:3.10
-          script:
-            - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-            - export PATH=$PATH:/usr/local/bin:/opt/homebrew/bin
-            - brew install nodejs npm
-            - export PATH=$PATH:/usr/local/bin
-            - npm install @playwright/test
-            - npx playwright install-deps
-            - pip install --upgrade pip
-            - pip install -r web_requirements.txt
-            - rfbrowser init
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:chromium --listener RetryFailed -e servicetest -e mobiletest .
-            - robot -d ./logs_web -x output-xunit.xml -v BROWSER:webkit --listener RetryFailed -e servicetest -e mobiletest .
-          artifacts:
-            - logs_web/output-xunit.xml
+    - step:
+        name: Install dependencies
+        script:
+          - apt-get update
+          - apt-get install -y curl python3 python3-pip
+          - curl -sL https://deb.nodesource.com/setup_14.x | bash -
+          - apt-get install -y nodejs
+          - pip3 install robotframework-browser
+          - npx playwright install
+          - rfbrowser init
 
-  pr:
-    branches:
-      include:
-        - main
-        - develop
-        - feature/*
+pr:
+  branches:
+    includes:
+      - main
+      - develop
+      - feature/*
