--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
           - apt-get install -y curl python3 python3-pip
           - curl -sL https://deb.nodesource.com/setup_14.x | bash -
           - apt-get install -y nodejs
+          - export PATH="$PATH:/usr/bin/npm:/usr/bin/npx"
           - pip3 install robotframework-browser
           - npx playwright install
           - rfbrowser init
