--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,14 +4,13 @@ pipelines:
   default:
     - step:
         name: Install dependencies
-        script:
+        bash:
           - apt-get update
           - apt-get install -y curl python3 python3-pip
           - curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash - &&\
           - apt-get install -y nodejs
           - export PATH="$PATH:/usr/bin/npm:/usr/bin/npx"
-          - cd /usr/local/bin/
-          - ls
+          - which npm
           - npm install -g npx
           - pip3 install robotframework-browser
           - npx playwright install
