--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands_pre =
 	robotidy --config .\pyproject.toml ./**/*.robot
   robocop -e missing-space-after-comment -e missing-doc-keyword -e empty-lines-between-sections --reports timestamp,all
 commands =
-  servicetests-local: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
-  mobiletests-local: robot -d ./logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
+  servicetests-local: robot -d ./{work_dir}/logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
+  mobiletests-local: robot -d ./{work_dir}/logs_mobile -x output-xunit.xml -e servicetest -e webtest {posargs}
 	webtests-local: rfbrowser init
-	webtests-local: robot -d ./logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest {posargs}
+	webtests-local: robot -d ./{work_dir}/logs_web -x output-xunit.xml --listener RetryFailed -e servicetest -e mobiletest {posargs}
